--- a/AngularStarterKitWeb/src/app/home/home.component.html
+++ b/AngularStarterKitWeb/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron izenda-header">
-  <h1>Izenda Angular2 Starterkit</h1>
+  <h1>Izenda Angular Starterkit</h1>
 
   <p class="lead">
     This starter kit will help your development team quickly and easily embed Izenda into your application.
