--- a/AngularStarterKitWeb/src/app/navbar/navbar.component.html
+++ b/AngularStarterKitWeb/src/app/navbar/navbar.component.html
@@ -70,6 +70,19 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li *ngIf="(isAuthenticated | async)"><a> Hello {{currentUser | async}} </a></li>
+                <li class="dropdown" [routerLinkActive]="['active']" *ngIf="(isAuthenticated | async)">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        Create User / Tenant
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <!-- TODO: create user -->
+                        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                            <a [routerLink]="['/createtenant']">Create Tenant</a>
+                        </li>
+                        
+                    </ul>
+                </li>
                 <li *ngIf="(isAuthenticated | async)"><a href="javascript:void(0)" (click)="logout()">Log off</a></li>
                 <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" *ngIf="!(isAuthenticated | async)">
                     <a [routerLink]="['/login']">Log In</a>
