1. Removed all unnecessary <app-navbar></app-navbar>; 2. Removed my internal comment with links; 3. fix for the case-sensitive admin login 4. fix for the login in as the non-system level user 5. WebAPI2 - > WebAPI in the host app window.

--- a/WebApi2StarterKit/WebApi2StarterKit/Views/Shared/_Layout.cshtml
+++ b/WebApi2StarterKit/WebApi2StarterKit/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("WebApi2StarterKit", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("WebApiStarterKit", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
