--- a/src/app/izendacomponents/reportpart.component.html
+++ b/src/app/izendacomponents/reportpart.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="izenda-container"> 
     <div class="quarter-screen" id="izenda-report-part1"> </div>
     <div class="quarter-screen" id="izenda-report-part2"> </div>
